--- a/app/package.json
+++ b/app/package.json
@@ -10,6 +10,8 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
+    "axios": "^1.12.2",
     "expo": "~54.0.10",
     "expo-constants": "~18.0.9",
     "expo-linking": "~8.0.8",
